--- a/pages/blog/test.mdx
+++ b/pages/blog/test.mdx
@@ -18,11 +18,13 @@ FlatList is a built-in component in the React Native ecosystem designed to rende
 FlatList offers a simple structure for setting up and rendering a list:
 
 ```jsx
-   <FlatList
-	    data={[{ value: 'a', id: 'a' }, { value: 'b', id: 'b' }, { value: 'c', id: 'c' }]}
-	    renderItem={({ item }) => <Item title={item.value} />}
-	    keyExtractor={item => item.id}
-		/>;
+const data = [{ value: 'a', id: 'a' }, { value: 'b', id: 'b' }, { value: 'c', id: 'c' }];
+
+<FlatList
+	data={data}
+	renderItem={({ item }) => <Item title={item.value} />}
+	keyExtractor={item => item.id}
+/>;
 ```
 
 In this example, you see how straightforward it is to set up a FlatList. You pass your data array, define how to render each item, and specify how to extract keys from your data. The result is an efficient list rendering solution that maintains performance, even when the number of elements scales to hundreds or thousands.
@@ -48,13 +50,13 @@ The `FlatList` component offers several features that make it stand out:
 const data = [{ value: 'a', id: 'a' }, { value: 'b', id: 'b' }, { value: 'c', id: 'c' }];
 
 <FlatList
-			// array of data - REQUIRED
-	    data={data}
-	    // this callback should return an item that will be rendered for all elements - REQUIRED
-	    renderItem={({ item }) => <Item title={item.value} />}
-	    // render callback that gets access to (item, index) and should return string
-	    keyExtractor={item => item.id}
-		/>;
+	// array of data - REQUIRED
+	data={data}
+	// this callback should return an item that will be rendered for all elements - REQUIRED
+	renderItem={({ item }) => <Item title={item.value} />}
+	// render callback that gets access to (item, index) and should return string
+	keyExtractor={item => item.id}
+/>;
 ```
 
 The holy-trinity of FlatList props are:
@@ -79,7 +81,7 @@ Without further ado, here they are:
 
 - `horizontal` - this prop lets you render your items as a horizontal list. It's very useful for short lists, typically used for less important items. It simplifies the creation of horizontally scrollable lists.
 - `numColumns` - do you want to create a list with multiple columns? Easy peasy! Simply pass the number of columns to this prop, and you're all set. Want to style your columns
-- **`columnWrapperStyle` -** this prop allows you to pass styles to the wrapper applied to all the columns.
+- `columnWrapperStyle` - this prop allows you to pass styles to the wrapper applied to all the columns.
 - `onEndReached` and `onEndReachedThreshold` - these props should be used together. Their main purpose is to perform an action when the user reaches a set threshold, i.e., when the user comes to the end of the list. A great way to utilize this will be explained below.
 
 ## How to optimize FlatList by creating controlled infinite scroll
@@ -102,24 +104,24 @@ The following code is a great example of how this works. First, you need to defi
 - **`onEndReached`** callback: This function runs every time the user surpasses the `onEndReachedThreshold`. In the following example, you can see it is used to perform an API call and append the data from the response to the `items` array passed to the `data` prop.
 
 ```jsx
- 		const [items, setItems] = useState([{ value: 'a', id: 'a' }, { value: 'b', id: 'b' }, { value: 'c', id: 'c' }]);
+const [items, setItems] = useState([{ value: 'a', id: 'a' }, { value: 'b', id: 'b' }, { value: 'c', id: 'c' }]);
  		
- 		const onEndReachedHandler = async () => {
- 		// get the new data that will be shown to the user
-		    const data = await fetch('any-api-call');
+const onEndReachedHandler = async () => {
+	// get the new data that will be shown to the user
+	const data = await fetch('any-api-call');
         
-        // append new data to your items state
-        setItems(prevItems => ([...prevItems, ...data]));
-    };  
+	// append new data to your items state
+	setItems(prevItems => ([...prevItems, ...data]));
+};  
   
-   <FlatList
-	    data={items}
-	    renderItem={({ item }) => <Item title={item.value} />}
-	    keyExtractor={item => item.id}
+<FlatList
+	data={items}
+	renderItem={({ item }) => <Item title={item.value} />}
+	keyExtractor={item => item.id}
 	    
-	    onEndReachedThreshold={0.4}
-		  onEndReached={onEndReachedHandler}
-		/>;
+	onEndReachedThreshold={0.4}
+	onEndReached={onEndReachedHandler}
+/>;
 ```
 
 And that's it! It’s really that simple to add infinite scroll or data pagination to your React Native application using `FlatList`.
