--- a/pages/blog/test.mdx
+++ b/pages/blog/test.mdx
@@ -106,6 +106,8 @@ Each time the user scrolls down the list, your app will append another pack of e
 
 This example is simple, but most apps will interact with an API. If you want to create the famous infinite scroll while keeping your app performant and your API not stressed out, this is the best way to go!
 
+## React Native FlatList infinite scroll example
+
 The following code is a great example of how this works. First, you need to define:
 
 - **`onEndReachedThreshold`**: This determines how soon your `onEndReached` function should be called. This value should be tweaked to suit your needs, as it depends on how long your callback will take to perform the data update. Manually adjust this value to find the sweet spot for your application.
