--- a/pages/blog/react-native/flatlist-performance.mdx
+++ b/pages/blog/react-native/flatlist-performance.mdx
@@ -1,4 +1,4 @@
-import MdxLayout from '../../components/blog/Layout';
+import MdxLayout from '../../../components/blog/Layout';
 
 
 ###### React Native performance tips and tricks.
